Fixed bg on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,10 +198,10 @@ img.brand
     font-weight: bold;
 }
 /* and (max-height: 768px) */
-@media screen and (max-width: 2048px)
+/* @media screen and (max-width: 2048px)
 {
     .img-container { margin: 0 auto; }
-}
+} */
 @media screen and (max-width: 1440px)
 {
     /* .container.justify-content-center {justify-content: flex-end;}    */
@@ -229,7 +229,7 @@ img.brand
         background-size: 500px;
         /* background-position-y: -117px;  */
         /* background-position-y: -87%;  */
-        background-position-y: 516%; 
+        background-position-y: 517%; 
         height: 767px;
     }
     .img-container.align-items-end
@@ -321,11 +321,18 @@ img.brand
         display: none;
     }
     .content-container.bg-color { background-color: unset; }
-    .img-container
+    .main
     {
         background: linear-gradient(0deg, rgba(18,23,37, 0.9) 0%, rgba(18,23,37,0.9) 100%), url(../mobile/image-host.jpg);
         background-repeat: no-repeat;
         background-size: cover;
+    }
+    .img-container
+    {
+        /* background: linear-gradient(0deg, rgba(18,23,37, 0.9) 0%, rgba(18,23,37,0.9) 100%), url(../mobile/image-host.jpg);
+        background-repeat: no-repeat;
+        background-size: cover; */
+        background: unset;
     }
     .img.logo
     {
